--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2022",
-    "module": "ES6",
+    "module": "esnext",
     "outDir": "dist",
     "strict": true,
     "moduleResolution": "node",
