--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "http-server": "^14.1.1",
     "prettier": "^3.0.0",
+    "ts-node": "^10.9.1",
     "winston": "^3.10.0",
     "yahoo-finance2": "^2.4.2"
   },
@@ -14,6 +18,7 @@
   "description": "stonk analyzer",
   "main": "index.js",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node-fetch": "^2.6.4",
     "typescript": "^5.1.6"
   },
