--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-server": "^14.1.1",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
     "winston": "^3.10.0",
