--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "http-server": "^14.1.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
+    "react": "^18.2.0",
     "ts-node": "^10.9.1",
     "winston": "^3.10.0",
     "yahoo-finance2": "^2.4.2"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/node-fetch": "^2.6.4",
+    "@types/react": "^18.2.15",
     "typescript": "^5.1.6"
   },
   "scripts": {
