--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,4 @@
 {
-    "semi": true,
-    "trailingComma": "none",
-    "singleQuote": true,
-    "printWidth": 110,
-    "tabWidth": 4,
-    "useTabs": false,
-    "arrowParens": "always"
-  }
-  
+  "singleQuote": true,
+  "trailingComma": "all"
+}
