--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@nestjs/common": "^10.1.1",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.0",
