--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "yahoo-finance2": "^2.4.3"
